crates/noxu-persist-derive/tests/ui/fail_two_primary_keys.rs
use noxu::persist::Entity;

#[derive(Entity)]
struct TwoKeys {
    #[primary_key]
    id: u64,
    #[primary_key]
    other: String,
}

fn main() {}
